--- a/style.css
+++ b/style.css
@@ -43,6 +43,14 @@ main{
     align-items: center;
     justify-content: space-around;
 }
+
+#h2{
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: bold;
+    font-size: 64px;
+    color: #E5E9FF;
+    margin-bottom: 30px;
+}
 .glavnoe{
     display: flex;
     flex-direction: column;
@@ -59,7 +67,18 @@ main{
     height: 30vh;
 }
 .nedelya{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap ;
+    font-size: 20px;
     width: 45vw;
     height: 75vh;
-    background-color: black;
+    background-color: transparent;
+}
+.nedelya div span{
+    display: block;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 10vw;
+    height: 10vh;
 }
